--- a/src/content/docs/welcome-to-docs.mdx
+++ b/src/content/docs/welcome-to-docs.mdx
@@ -1,28 +1,24 @@
 ---
-title: ScrewFast Docs
+title: Homelab Docs
 head:
   - tag: title
-    content: ScrewFast Docs
-description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services. 
+    content: Homelab Docs
+description: Documentation to remember how I built this thing..
 template: splash
 editUrl: false
 lastUpdated: false
 next: false
 hero:
-  title: Documentation Hub
-  tagline: Your central hub for streamlined tool guidance, detailed service docs, and project support.
-  image:
-      alt: A ScrewFast's Logo
-      dark: ../../images/starlight/screwfast_hero.svg
-      light: ../../images/starlight/screwfast_hero_dark.svg
+  title: Documentation hub
+  tagline: Central place of documentation, so I can reference how this homelab was built.
   actions:
     - text: Get started
       icon: right-arrow
       variant: primary
-      link: /guides/getting-started/
+      link: /guides/debian-iso-install/
     - text: View on GitHub
       icon: external
-      link: https://github.com/mearashadowfax/ScrewFast
+      link: https://github.com/karlazzampersonal/homelab/tree/main
 ---
 import "@/styles/starlight_main.css";
 import { Card, CardGrid } from '@astrojs/starlight/components';
@@ -30,18 +26,14 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <CardGrid stagger>
 
   <Card title="Quick Start Guides" icon="document">
-    Get up and running swiftly with our straightforward and concise guides, tailored for new users and seasoned experts alike.
+      Quick references to actions performed in the homelab.
   </Card>
 
-  <Card title="Tools & Equipment" icon="seti:eslint">
-    Discover the complete lineup of ScrewFast's superior quality tools and equipment. Each subsection offers detailed specifications, usage instructions, and maintenance tips.
+  <Card title="Architecture" icon="seti:eslint">
+      Breakdown of the Homelab Architecture
   </Card>
 
-   <Card title="Construction Services" icon="seti:puppet">
-    Discover the complete lineup of ScrewFast's superior quality tools and equipment. Each subsection offers detailed specifications, usage instructions, and maintenance tips.
-  </Card>
-
-   <Card title="Advanced Topics" icon="seti:terraform">
-    Discover the complete lineup of ScrewFast's superior quality tools and equipment. Each subsection offers detailed specifications, usage instructions, and maintenance tips.
-  </Card>
+   <Card title="IaC" icon="seti:terraform">
+       Documentation on the IaC automation for the homelab.
+   </Card>
 </CardGrid>
