--- a/src/content/docs/iac/service-overview.mdx
+++ b/src/content/docs/iac/service-overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: CDKTF (CDK for Terraform) Provisioning
-description: Guide on IAC for setting up everything inside each Debian OS
+description: Guide on IAC for setting up everything inside each Ubuntu OS
 sidebar:
   label: CDKTF
   order: 2
