--- a/src/content/docs/guides/ubuntu-iso-install.mdx
+++ b/src/content/docs/guides/ubuntu-iso-install.mdx
@@ -1,8 +1,8 @@
 ---
-title: Installing Debian ISO on USB stick
-description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services. 
+title: Installing Ubuntu ISO on USB stick
+description: Instructions on installing Ubuntu ISO file.
 sidebar:
-  label: Installing Debian ISO on USB stick
+  label: Installing Ubuntu ISO on USB stick
   order: 1
 ---
 
@@ -11,9 +11,9 @@ import {
   Aside,
 } from "@astrojs/starlight/components";
 
-I am not running a hypervisor such as Proxmox since I want to run kubernetes bare-metal in Debian. So I'll need
-to put the Debian ISO on a USB stick so that I can install it each Mini PC. I went with Debian as my Linux OS since it has excellent
-documentation and is relatively stable.
+I am not running a hypervisor such as Proxmox since I want to run kubernetes bare-metal in Ubuntu. So I'll need
+to put the Ubuntu ISO on a USB stick so that I can install it each Mini PC. I went with Ubuntu as my Linux OS since it has excellent
+documentation and is relatively stable. I went with 24.04 as it's the latest LTS version.
 
 ## Setup Instructions on a Mac
 
@@ -21,7 +21,7 @@ documentation and is relatively stable.
 
 <Steps>
 1. Plug the USB stick in.
-2. Go to [Debian distribution page](https://www.debian.org/distrib/netinst) and click on `amd64` since that's the architecture for our N100 Intel chip to download the ISO file.
+2. Go to [Ubuntu 24.04 page](https://releases.ubuntu.com/24.04) and click on `Server Install Image` since we're using these as servers.
 3. Cd into the downloads folder where the ISO file is.
     ```bash
     cd ~/Downloads
@@ -38,10 +38,9 @@ documentation and is relatively stable.
     ```bash
     sudo diskutil unmountDisk /dev/disk4
     ```
-    
 7. Finally, let's add the ISO file to the disk. Change the file name to be the name of your iso file along with the disk name.
     ```bash
-    sudo dd if=./debian-12.5.0-amd64-netinst.iso of=/dev/disk4 bs=1m
+    sudo dd if=./ubuntu-24.04-beta-live-server-amd64.iso of=/dev/disk4 bs=1m
     ```
     <Aside>You will notice an error after this step saying the disk is not readable, click eject anyways, this error is expected since Macs can't read the new filesystem on the USB stick.</Aside>
   
