add high level arch for k3s

--- a/src/content/docs/architecture/high-level-architecture.mdx
+++ b/src/content/docs/architecture/high-level-architecture.mdx
@@ -5,5 +5,8 @@ sidebar:
   label: High level Architecture
   order: 1
 ---
+import { Image } from 'astro:assets';
 
-TBD
+import k3s_architecture2 from '../../../../architecture_diagrams/k3s_architecture.png';
+
+<Image src={k3s_architecture2} alt="k3s architecture"/>
