add router config, update architecture

--- a/src/content/docs/guides/dns-record-setup.mdx
+++ b/src/content/docs/guides/dns-record-setup.mdx
@@ -3,7 +3,7 @@ title: Set up DNS records
 description: Configure DNS records for your domain name to point to the public IP address
 sidebar:
   label: Set up DNS records
-  order: 3
+  order: 4
 ---
 
 import {
@@ -11,7 +11,7 @@ import {
   Aside,
 } from "@astrojs/starlight/components";
 
-We bought a domain name from porkbun (domain name registrar). The eventual goal is to have some public facing services inside our kubernetes cluster.
+I bought a domain name from porkbun (domain name registrar). The eventual goal is to have some public facing services inside our kubernetes cluster.
 To do that, we first need to configure DNS records for our domain name.
 
 This must be done for multiple reasons:
